fix: could not tolerate fixed menu with always visible scrollbar

--- a/_sass/theme/mixins.scss
+++ b/_sass/theme/mixins.scss
@@ -514,7 +514,6 @@
     padding-right: $global-medium-gutter;
     top: 112px;
     bottom: 70px;
-    overflow-y: scroll;
     overflow-x: hidden;
     margin-left: 15px;
     > h5 {
